feat: make t3chat usable and refactor files

--- a/api/endpoint/posts.mdx
+++ b/api/endpoint/posts.mdx
@@ -26,7 +26,7 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts")
     {
       "id": "clt92n38p000108l48zkj41an",
       "slug": "introducing-marblecms",
-      "title": "Introducing MarbleCMS",
+      "title": "Introducing Marble",
       "content": "...",
       "description": "The modern headless CMS for modern web applications.",
       "coverImage": "...",
@@ -99,5 +99,5 @@ Use query parameters to paginate, sort, and filter the results.
   Responses include a `pagination` object with `limit`, `currentPage`,
   `previousPage`, `nextPage`, `totalPages`, and `totalItems`. For advanced usage
   and error cases (like invalid page numbers), see the full guide on
-  <a href="/content/api/pagination">Pagination</a>.
+  <a href="/api/pagination">Pagination</a>.
 </Note>
