--- a/guides/quickstart.mdx
+++ b/guides/quickstart.mdx
@@ -48,7 +48,7 @@ Give your workspace a name (you can always change it later) and click **Create W
 </Step>
 
 <Step title="Explore the dashboard">
-Once your workspace is ready, you’ll be taken to the dashboard. This is your central hub for managing content. From here, you can create posts, upload media, and invite teammates.
+Once your workspace is ready, you'll be taken to the dashboard. This is your central hub for managing content. From here, you can create posts, upload media, and invite teammates.
 
 <Frame>
   <picture>
@@ -89,9 +89,9 @@ That's it! You've successfully set up your Marble workspace and created your fir
 Now you're ready to connect your content to your frontend. Check out our integration guides to get started.
 
 <CardGroup>
-  <Card title="Next.js Integration" href="/content/guides/integrations/nextjs" icon="react"></Card>
-  <Card title="Astro Integration" href="/content/guides/integrations/astro" icon="stars"></Card>
-  <Card title="TanStack Start Integration" href="/content/guides/integrations/tanstack" icon="tree-palm"></Card>
+  <Card title="Next.js Integration" href="/guides/integrations/nextjs" icon="react" />
+  <Card title="Astro Integration" href="/guides/integrations/astro" icon="stars" />
+  <Card title="TanStack Start Integration" href="/guides/integrations/tanstack" icon="tree-palm" />
 </CardGroup>
 </Step>
 </Steps>
