--- a/guides/integrations/astro.mdx
+++ b/guides/integrations/astro.mdx
@@ -5,7 +5,7 @@ description: "Integrate Marble in your Astro application"
 
 To integrate Marble in your Astro application, you first need an Astro site. If you don't have one, you can check out the [Astro documentation](https://docs.astro.build/en/tutorial/0-introduction/) to get started, or use our [Astro blog template](https://github.com/taqh/astro-example) for a ready-to-go solution.
 
-Astro's **Content Collections** are the best way to manage content in your project. We'll use a **Content Loader** to fetch your posts from Marble and make them available in your Astro site with full type-safety. You can learn more about this in the [Astro Content Collections documentation](https://docs.astro.build/en/guides/content-collections/).
+Astro's **Content Collections** are the best way to manage content in your project. We'll use a **Content Loader** to fetch your posts from Marble and make them available in your Astro site with full type-safety. You can learn more about this in the [Astro Content Collections documentation](https://docs.astro.build/en/guides-collections/).
 
 <Steps>
 <Step title="Set up environment variables">
@@ -28,16 +28,16 @@ You can find your Workspace Key in your Marble dashboard under your workspace se
 </Step>
 
 <Step title="Configure your content collection">
-Next, define your content collection. This tells Astro how to fetch and validate your data from Marble. Create a file named `src/content/config.ts` and add the following code.
+Next, define your content collection. This tells Astro how to fetch and validate your data from Marble. Create a file named `src/config.ts` and add the following code.
 
 This configuration defines a `posts` collection, and includes a loader function that fetches your posts from the Marble API.
 
 <Note>
-  For complete TypeScript type definitions, see our [Types reference](/content/api/types). The schema below matches the `Post` type from
+  For complete TypeScript type definitions, see our [Types reference](/api/types). The schema below matches the `Post` type from
   the API.
 </Note>
 
-```typescript src/content.config.ts
+```typescript src.config.ts
 import { z, defineCollection } from "astro:content";
 import type { MarblePostList } from "./types/marble";
 
