--- a/guides/introduction.mdx
+++ b/guides/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Welcome to MarbleCMS"
+description: "Welcome to Marble"
 ---
 
 **Marble is a simple, headless CMS built for writers and developers.** It helps you manage and publish content without the complexity of traditional CMS platforms.
@@ -36,7 +36,7 @@ description: "Welcome to MarbleCMS"
 
 ## Ready to get started?
 
-<Card title="Quickstart Guide" href="/content/guides/quickstart" icon="rocket">
+<Card title="Quickstart Guide" href="/guides/quickstart" icon="rocket">
   Follow our quickstart guide to set up your account and create your first post
   in minutes.
 </Card>
