fix: sync type usage with rename

--- a/guides/integrations/nextjs.mdx
+++ b/guides/integrations/nextjs.mdx
@@ -41,11 +41,11 @@ Create a file at `lib/query.ts` (or `.js` if you're using JavaScript).
 
 ```typescript lib/query.ts
 import type {
-  MarbleAuthorList,
-  MarbleCategoryList,
-  MarblePost,
-  MarblePostList,
-  MarbleTagList,
+  MarbleAuthorListResponse,
+  MarbleCategoryListResponse,
+  MarblePostResponse,
+  MarblePostList,Response
+  MarbleTagListResponse,
 } from "@/types/marble";
 
 const url = process.env.MARBLE_API_URL;
@@ -54,7 +54,7 @@ const key = process.env.MARBLE_WORKSPACE_KEY;
 export async function getPosts() {
   try {
     const raw = await fetch(`${url}/${key}/posts`);
-    const data: MarblePostList = await raw.json();
+    const data: MarblePostListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -64,7 +64,7 @@ export async function getPosts() {
 export async function getTags() {
   try {
     const raw = await fetch(`${url}/${key}/tags`);
-    const data: MarbleTagList = await raw.json();
+    const data: MarbleTagListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -74,7 +74,7 @@ export async function getTags() {
 export async function getSinglePost(slug: string) {
   try {
     const raw = await fetch(`${url}/${key}/posts/${slug}`);
-    const data: MarblePost = await raw.json();
+    const data: MarblePostResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -84,7 +84,7 @@ export async function getSinglePost(slug: string) {
 export async function getCategories() {
   try {
     const raw = await fetch(`${url}/${key}/categories`);
-    const data: MarbleCategoryList = await raw.json();
+    const data: MarbleCategoryListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -94,7 +94,7 @@ export async function getCategories() {
 export async function getAuthors() {
   try {
     const raw = await fetch(`${url}/${key}/authors`);
-    const data: MarbleAuthorList = await raw.json();
+    const data: MarbleAuthorListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
