--- a/guides/integrations/tanstack.mdx
+++ b/guides/integrations/tanstack.mdx
@@ -51,11 +51,11 @@ npm install zod
 
 ```typescript lib/query.ts
 import type {
-  MarbleAuthorList,
-  MarbleCategoryList,
-  MarblePost,
-  MarblePostList,
-  MarbleTagList,
+  MarbleAuthorListResponse,
+  MarbleCategoryListResponse,
+  MarblePostResponse,
+  MarblePostListResponse,
+  MarbleTagListResponse,
 } from "@/types/marble";
 import { createServerFn } from "@tanstack/react-start";
 import { z } from "zod";
@@ -66,7 +66,7 @@ const key = process.env.MARBLE_WORKSPACE_KEY;
 export const getPosts = createServerFn().handler(async () => {
   try {
     const raw = await fetch(`${url}/${key}/posts`);
-    const data: MarblePostList = await raw.json();
+    const data: MarblePostListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -76,7 +76,7 @@ export const getPosts = createServerFn().handler(async () => {
 export const getTags = createServerFn().handler(async () => {
   try {
     const raw = await fetch(`${url}/${key}/tags`);
-    const data: MarbleTagList = await raw.json();
+    const data: MarbleTagListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -88,7 +88,7 @@ export const getSinglePost = createServerFn()
   .handler(async ({ data: slug }) => {
     try {
       const raw = await fetch(`${url}/${key}/posts/${slug}`);
-      const data: MarblePost = await raw.json();
+      const data: MarblePostResponse = await raw.json();
       return data;
     } catch (error) {
       console.log(error);
@@ -98,7 +98,7 @@ export const getSinglePost = createServerFn()
 export const getCategories = createServerFn().handler(async () => {
   try {
     const raw = await fetch(`${url}/${key}/categories`);
-    const data: MarbleCategoryList = await raw.json();
+    const data: MarbleCategoryListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
@@ -108,7 +108,7 @@ export const getCategories = createServerFn().handler(async () => {
 export const getAuthors = createServerFn().handler(async () => {
   try {
     const raw = await fetch(`${url}/${key}/authors`);
-    const data: MarbleAuthorList = await raw.json();
+    const data: MarbleAuthorListResponse = await raw.json();
     return data;
   } catch (error) {
     console.log(error);
