feat: sync docs with api

--- a/api/endpoint/authors.mdx
+++ b/api/endpoint/authors.mdx
@@ -26,7 +26,16 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/authors")
     {
       "id": "clt92f96m000008l4gken6v2t",
       "name": "John Doe",
-      "image": "..."
+      "slug": "john-doe",
+      "image": "...",
+      "bio": "John is a software developer and writer.",
+      "role": "Software Developer",
+      "socials": [
+        {
+          "url": "https://twitter.com/johndoe",
+          "platform": "x"
+        }
+      ]
     }
   ]
 }
