--- a/api/endpoint/categories.mdx
+++ b/api/endpoint/categories.mdx
@@ -26,12 +26,20 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/categories")
     {
       "id": "clt92hrnp000208l43kbo28d0",
       "name": "Announcements",
-      "slug": "announcements"
+      "slug": "announcements",
+      "description": "Latest news and updates.",
+      "count": {
+        "posts": 5
+      }
     },
     {
       "id": "clt92hrnp000308l4ajp74b32",
       "name": "Tutorials",
-      "slug": "tutorials"
+      "slug": "tutorials",
+      "description": null,
+      "count": {
+        "posts": 12
+      }
     }
   ]
 }
