--- a/api/endpoint/tags.mdx
+++ b/api/endpoint/tags.mdx
@@ -26,12 +26,20 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/tags")
     {
       "id": "clt92k3c1000408l47h5f0b5y",
       "name": "Product",
-      "slug": "product"
+      "slug": "product",
+      "description": "All about product updates.",
+      "count": {
+        "posts": 8
+      }
     },
     {
       "id": "clt92k3c1000508l4gd2p3b8h",
       "name": "Engineering",
-      "slug": "engineering"
+      "slug": "engineering",
+      "description": null,
+      "count": {
+        "posts": 4
+      }
     }
   ]
 }
