fix: document featured properly

--- a/api/endpoint/posts.mdx
+++ b/api/endpoint/posts.mdx
@@ -26,6 +26,7 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts")
       "slug": "introducing-marblecms",
       "title": "Introducing Marble",
       "content": "<h1>Hello World!</h1><p>This is the content of the post.</p>",
+      "featured": true,
       "description": "The modern headless CMS for modern web applications.",
       "coverImage": "...",
       "publishedAt": "2024-03-05T00:00:00.000Z",
