--- a/api/types.mdx
+++ b/api/types.mdx
@@ -18,6 +18,7 @@ export type Post = {
   slug: string;
   title: string;
   content: string;
+  featured: boolean;
   description: string;
   coverImage: string;
   publishedAt: Date;
