--- a/api/introduction.mdx
+++ b/api/introduction.mdx
@@ -11,35 +11,10 @@ All API access is over HTTPS and is accessed from the `api.marblecms.com` domain
 
 The structure of a request is: `https://api.marblecms.com/v1/:workspaceKey/:resource`
 
-## Trying it out
+Where `:workspaceKey` is your unique workspace key, and `:resource` is the specific resource you want to interact with (e.g., `posts`, `categories`, `tags`, etc.).
 
-Throughout this documentation, we use an example workspace ID: `cm6ytuq9x0000i803v0isidst`. You can use this ID to make live API requests and see real responses without needing an account.
+A workspace key can be found in your Marble dashboard under settings > general and should not be shared publicly.
 
-For example, to get all posts from the example workspace:
-
-```bash
-$ curl https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts
-```
-
-<Note>
-  The example workspace (`cm6ytuq9x0000i803v0isidst`) does not require
-  authentication. When you are ready to use your own workspace, you will need to
-  use your workspace key in the URL path.
-</Note>
+In the future Marble may support a more fine-grained authentication mechanism using API-Keys, but for now, the workspace key is sufficient.
 
 All timestamps are in UTC ISO 8601 format: `YYYY-MM-DDTHH:MM:SSZ`.
-
-## Authentication
-
-> To authorize, use this code:
-
-```bash
-# Simply include your workspace key in the URL path
-curl "https://api.marblecms.com/v1/YOUR_WORKSPACE_KEY/posts"
-```
-
-> Make sure to replace `YOUR_WORKSPACE_KEY` with your actual workspace key.
-
-When you're ready to use your own workspace, Marble authenticates your API requests using your workspace key in the URL path. If you do not include your workspace key in the URL, or use one that is incorrect or outdated, Marble returns an error.
-
-Your workspace key carries many privileges, so be sure to keep it secure! Do not share your workspace key in publicly accessible areas such as GitHub, client-side code, and so forth.
