fix: move workspace key

--- a/api/getting-started.mdx
+++ b/api/getting-started.mdx
@@ -32,4 +32,7 @@ curl "https://api.marblecms.com/v1/YOUR_WORKSPACE_KEY/posts"
 
 When you're ready to use your own workspace, Marble authenticates your API requests using your workspace key in the URL path. If you do not include your workspace key in the URL, or use one that is incorrect or outdated, Marble returns an error.
 
+The workspace key can be found in your Marble dashboard under `settings > general` and should not be shared publicly.
+
+
 Your workspace key carries many privileges, so be sure to keep it secure! Do not share your workspace key in publicly accessible areas such as GitHub, client-side code, and so forth.
