--- a/guides/features/webhooks.mdx
+++ b/guides/features/webhooks.mdx
@@ -42,7 +42,9 @@ By listening for specific events, you can build powerful, event-driven automatio
 
 To ensure that incoming webhook requests are from Marble and haven't been tampered with, you can verify the request using the webhook secret.
 
-Here's an example of how to verify a webhook request in Next.js using the `crypto` module:
+If you don't want to copy the verification code into your project, we published an official npm package, `@usemarble/core`, which exports a `verifyMarbleSignature` helper you can use directly. Install it with `npm install @usemarble/core` and then import the helper where needed.
+
+Here's an example of how to verify a webhook request in Next.js using the `crypto` module (or use `verifyMarbleSignature` from `@usemarble/core` instead of copying this function):
 
 ```typescript
 // lib/marble/webhook.ts
