feat: add better import docs

--- a/guides/introduction.mdx
+++ b/guides/introduction.mdx
@@ -19,7 +19,7 @@ description: "Welcome to Marble"
     Invite others to write, edit, and review posts in a shared workspace.
   </Card>
   <Card title="Image Support" icon="image">
-    Upload images directly to Marble or link from your own storage solution.
+    Upload images directly to Marble or link from your own storage solution. All media is delivered through Cloudflare's globally distributed CDN for fast loading worldwide.
   </Card>
 </CardGroup>
 
