--- a/guides/quickstart.mdx
+++ b/guides/quickstart.mdx
@@ -86,7 +86,7 @@ When you're ready, you can save your post as a draft or publish it immediately.
 <Step title="Next Steps">
 That's it! You've successfully set up your Marble workspace and created your first post. 🚀
 
-Now you're ready to connect your content to your frontend. Check out our integration guides to get started.
+Now you're ready to connect your content to your frontend. Check out our integration guides to get started. For faster integration, add the [Context7 MCP server](https://context7.com/websites/marblecms) to your setup.
 
 <CardGroup>
   <Card title="Next.js Integration" href="/guides/integrations/nextjs" icon="react" />
