fix: ResponseExample and RequestExample

--- a/api/endpoint/posts.mdx
+++ b/api/endpoint/posts.mdx
@@ -4,7 +4,6 @@ description: "Retrieves a paginated list of posts in a workspace."
 ---
 
 <RequestExample>
-<CodeGroup>
 ```bash cURL
 curl "https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts"
 ```
@@ -22,11 +21,10 @@ import requests
 response = requests.get("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts")
 print(response.json())
 ```
-</CodeGroup>
 </RequestExample>
 
 <ResponseExample>
-```json
+```json Response
 {
   "posts": [
     {
