--- a/api/endpoint/tags.mdx
+++ b/api/endpoint/tags.mdx
@@ -18,7 +18,7 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/tags")
 </RequestExample>
 
 <ResponseExample>
-```json
+```json Response
 {
   "tags": [
     {
