--- a/guides/features/webhooks.mdx
+++ b/guides/features/webhooks.mdx
@@ -1,6 +1,7 @@
 ---
 title: Webhooks
 description: Using webhooks to trigger builds and automate workflows.
+tag: "NEW"
 ---
 
 Webhooks provide a powerful way to keep your site's content fresh and automate workflows. When an event occurs in your Marble workspace (like publishing a post), we can send an HTTP POST payload to a URL you configure. Webhooks are powered by [Upstash QStash](https://upstash.com?utm_source=marble-docs), ensuring reliable delivery of events.
